# mlflow

./: Dockerfile  README.md  action.yaml  makefile  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yaml  tests.yaml
.neuro/: live.yaml
outputs-server/: Dockerfile  filters.py  main.py  pyproject.toml
tests/: test_mlflow_runs.py
